# Plant-Protein-BERT

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.vast  GEMINI.md  LICENSE  README.md  bert_mlm.py  bert_mlm_debug.py  claude_sesson.md  conversation.md  environment.yml  pyproject.toml  repo.md  requirements.in  requirements.txt  requirements.vast.txt  test.py
Hugging_face_uploads/: info.md
Hugging_face_uploads/35m/: README.md  config.json
Hugging_face_uploads/8m/: README.md  config.json
Hugging_face_uploads/HF_spaces_app/: app.py  requirements.txt
configs/: HANDOFF_REPORT.md  config.yaml
configs/data/: trembl_full.yaml
configs/esm2_adapt/: config.yaml  info.md
configs/evaluation/: default.yaml
configs/experiment/: dev_run.yaml  finetune_esm2_150m.yaml  finetune_esm2_35m.yaml  finetune_esm2_8m.yaml  finetune_go_terms.yaml  finetune_plant_bert_150m.yaml  finetune_plant_bert_35m.yaml  finetune_plant_bert_8m.yaml  pretrain_base.yaml  pretrain_plant_150m.yaml  pretrain_plant_35m.yaml  pretrain_plant_8m.yaml
configs/model/: bert_base.yaml  bert_large.yaml  bert_small.yaml  esm2_150m.yaml  (+5 more)
esm2_adapt_test/: benchmark_plant_tasks.py  test_adapted_esm2.py
scripts/: adapt_esm2.py  analyze_uniref50_distribution.py  benchmark_plant_tasks.py  evaluate.py  fasta_to_hdf5.py  filter_viridiplantae.py  finetune.py  parse_uniprot.py  plot_plant_species_distribution.py  plot_uniref50_distribution.py  pretrain.py  test_adapted_esm2.py  train_gpu_configs_150.sh  train_tokenizer.py  vast_onstart.sh
tests/: conftest.py  test_metrics.py  test_parser.py  test_tokenizer.py
(+65 files in other folders)
